force-app/main/default/objects/Attendance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Present</fullName><default>true</default><label>Present</label></value>
            <value><fullName>Absent</fullName><default>false</default><label>Absent</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>