force-app/main/default/objects/Attendance__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <type>MasterDetail</type>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>